--- a/vue_frontend/package.json
+++ b/vue_frontend/package.json
@@ -13,7 +13,9 @@
     "core-js": "^3.6.5",
     "dateformat": "^3.0.3",
     "qs": "^6.9.4",
+    "sanitize-html": "^2.0.0",
     "vue": "^2.6.11",
+    "vue-linkify": "^1.0.1",
     "vue-router": "^3.3.4",
     "vuetify": "^2.3.5"
   },
