Fix eslinter errors in frontend, update dev service url

--- a/config.cfg
+++ b/config.cfg
@@ -15,7 +15,7 @@ port = 8005
 host = 0.0.0.0
 development = True
 remote_path = relval_dev_submission/
-service_url = https://pdmv-dev-proxy.web.cern.ch/relval
+service_url = https://cms-pdmv-dev.cern.ch/relval
 cmsweb_url = https://cmsweb-testbed.cern.ch
 credentials_path = ...
 database_auth = ...
