--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,8 +1,7 @@
 name: Pylint
 
 on:
-  push:
-    branches: [ master ]
+  workflow_dispatch:
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ master ]
@@ -11,7 +10,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    name: Get newest code and run pylint
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
