--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -14,14 +14,14 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
-    - name: Set up Python 3.8
+    - name: Set up Python 3.6
       uses: actions/setup-python@v1
       with:
-        python-version: 3.8
+        python-version: 3.6
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install -r requirements.txt
+        python3 -m pip install --upgrade pip
+        python3 -m pip install -r requirements.txt
         pip install pylint
     - name: Checkout PdmVWebCore
       run: |
@@ -29,4 +29,5 @@ jobs:
         git submodule update
     - name: Analysing the code with pylint
       run: |
-        python3 -m pylint `find . -type f | grep .py$ | grep -v "\./scripts/" | xargs`
+        python3 -m pylint --version
+        python3 -m pylint --fail-under=9.5 --fail-on=E --reports=y `find . -type f | grep .py$ | grep -v "\./scripts/" | xargs`
