--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -3,7 +3,6 @@ name: Pylint
 on:
   workflow_dispatch:
   pull_request:
-    # The branches below must be a subset of the branches above
     branches: [ master ]
 
 jobs:
@@ -14,19 +13,20 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
-    - name: Set up Python 3.8
+      with:
+        submodules: true
+    - name: Set up Python 3.6
       uses: actions/setup-python@v1
       with:
-        python-version: 3.8
+        python-version: 3.6
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install -r requirements.txt
-        pip install pylint
-    - name: Checkout PdmVWebCore
+        python3 -m pip install --upgrade pip
+        python3 -m pip install -r requirements.txt
+    - name: Run pylint
+      # --fail-under=9.5 - fail if score is below 9.5
+      # --fail-on=E - fail if there were errors, regardless of the score
+      # --reports=y - print a report at the end
       run: |
-        git submodule init
-        git submodule update
-    - name: Analysing the code with pylint
-      run: |
-        python3 -m pylint `find . -type f | grep .py$ | grep -v "\./scripts/" | xargs`
+        python3 -m pylint --version
+        python3 -m pylint --fail-under=9.5 --fail-on=E --reports=y `find . -type f | grep .py$ | grep -v "\./scripts/" | xargs`
