--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "core_lib"]
 	path = core_lib
-	url = git@github.com:cms-PdmV/PdmVWebCore.git
+	url = https://github.com/cms-PdmV/PdmVWebCore.git
