--- a/.github/workflows/release-master.yml
+++ b/.github/workflows/release-master.yml
@@ -96,12 +96,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         path: RelVal
-
-    - name: Checkout PdmVWebCore
-      run: |
-        cd RelVal
-        git submodule init
-        git submodule update
+        submodules: true
 
     - name: Save timestamp in release
       run: cp info/release_timestamp RelVal
