--- a/config.cfg
+++ b/config.cfg
@@ -5,7 +5,7 @@ development = False
 remote_path = relval_submission/
 service_url = https://cms-pdmv.cern.ch/relval
 cmsweb_url = https://cmsweb.cern.ch
-credentials_path = ...
+credentials_file = ...
 database_auth = ...
 grid_user_cert = ...
 grid_user_key = ...
@@ -17,7 +17,7 @@ development = True
 remote_path = relval_dev_submission/
 service_url = https://cms-pdmv-dev.cern.ch/relval
 cmsweb_url = https://cmsweb-testbed.cern.ch
-credentials_path = ...
+credentials_file = ...
 database_auth = ...
 grid_user_cert = ...
 grid_user_key = ...
