--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -3,30 +3,29 @@ name: Pylint
 on:
   workflow_dispatch:
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     name: Get newest code and run pylint
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-      with:
-        submodules: true
-    - name: Set up Python 3.6
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.7
-    - name: Install dependencies
-      run: |
-        python3 -m pip install --upgrade pip
-        python3 -m pip install -r requirements.txt
-    - name: Run pylint
-      # --fail-under=9.5 - fail if score is below 9.5
-      # --fail-on=E - fail if there were errors, regardless of the score
-      # --reports=y - print a report at the end
-      run: |
-        python3 -m pylint --version
-        python3 -m pylint --fail-under=9.5 --fail-on=E --reports=y `find . -type f | grep .py$ | grep -v "\./scripts/" | xargs`
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          submodules: true
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.11.4
+      - name: Install dependencies
+        run: |
+          python3 -m pip install --upgrade pip
+          python3 -m pip install -r requirements.txt
+      - name: Run pylint
+        # --fail-under=9.75 - fail if score is below 9.75
+        # --fail-on=E - fail if there were errors, regardless of the score
+        # --reports=y - print a report at the end
+        run: |
+          python3 -m pylint --version
+          python3 -m pylint --fail-under=9.75 --fail-on=E --reports=y `find . -type d \( -path ./venv -o -path ./core_lib \) -prune -o -type f | grep .py$ | xargs`
