--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -36,6 +36,10 @@ jobs:
           # Prefix the list here with "+" to use these queries and those in the config file.
           # queries: ./path/to/local/query, your-org/your-repo/queries@main
 
+      - name: Install Kerberos client
+        run: |
+          sudo apt-get install -y libkrb5-dev
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
