--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -14,6 +14,9 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: true
+      - name: Install Kerberos client
+        run: |
+          sudo apt-get install -y libkrb5-dev
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
