--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 Flask==2.3.3
 Flask-Cors==4.0.0
 Flask-RESTful==0.3.10
-paramiko==3.3.1
+paramiko==3.4.0
 pymongo==3.13.0
 requests==2.31.0
 PyJWT==2.8.0
 Authlib==1.2.1
 gunicorn==21.2.0
 pylint>=2.17.5
+gssapi==1.8.3
+pyasn1==0.5.1
